<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <ScrollView
    android:id="@+id/signup_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="56dp"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      android:orientation="vertical">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cube_logo"
        android:contentDescription="@string/default_text"/>

      <!--  First Name Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/firstNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/first_name_hint">
        <EditText
          android:id="@+id/input_firstName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textCapWords"/>
      </android.support.design.widget.TextInputLayout>

      <!--  Last name Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/lastnameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/last_name_hint">
        <EditText
          android:id="@+id/input_lastName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textCapWords"/>
      </android.support.design.widget.TextInputLayout>
      <!-- Email Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_EmailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/email_hint">
        <android.support.design.widget.TextInputEditText
          android:id="@+id/input_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"/>
      </android.support.design.widget.TextInputLayout>

      <!-- Password Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_PassWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/password_hint">
        <android.support.design.widget.TextInputEditText
          android:id="@+id/input_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"/>
      </android.support.design.widget.TextInputLayout>

      <!-- Signup Button -->
      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/create_account"/>

      <TextView
        android:id="@+id/link_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/already_member"
        android:textSize="16sp"/>

    </LinearLayout>
  </ScrollView>
</layout>