<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_border">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

      <ImageView
          android:id="@+id/popup_ib_close"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:src="@drawable/ic_clear_24dp" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/returnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

          <TextView
              android:id="@+id/textView9"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/returns"
              android:textColor="#172b4d"
              android:textSize="15sp" />

          <TextView
              android:id="@+id/textView13"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView9"
              android:paddingLeft="10dp"
              android:text="@string/returns_explanatory"
              android:textAlignment="viewStart"
              android:textColor="#172b4d" />

          <TextView
              android:id="@+id/textView14"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView13"
              android:text="@string/Formula"
              android:textColor="#172b4d"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/textView15"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView14"
              android:layout_marginStart="5dp"
              android:layout_toEndOf="@+id/textView14"
              android:text="@string/return_Formula"
              android:textColor="#172b4d" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/performanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/returnLayout"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

          <TextView
              android:id="@+id/textView16"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/performance"
              android:textColor="#172b4d"
              android:textSize="16sp" />

          <TextView
              android:id="@+id/textView17"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView16"
              android:paddingLeft="10dp"
              android:text="@string/performance_explanatory"
              android:textAlignment="viewStart"
              android:textColor="#172b4d" />

          <TextView
              android:id="@+id/textView20"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView17"
              android:text="@string/Formula"
              android:textColor="#172b4d"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/textView21"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView20"
              android:layout_marginStart="5dp"
              android:layout_toEndOf="@+id/textView20"
              android:text="@string/performance_Formula"
              android:textColor="#172b4d" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/strengthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

          <TextView
              android:id="@+id/textView22"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/strength"
              android:textColor="#172b4d"
              android:textSize="16sp" />

          <TextView
              android:id="@+id/textView23"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView22"
              android:paddingStart="10dp"
              android:text="@string/strength_explanatory"
              android:textAlignment="viewStart"
              android:textColor="#172b4d"
              tools:ignore="RtlSymmetry" />

          <TextView
              android:id="@+id/textView24"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView23"
              android:text="@string/Formula"
              android:textColor="#172b4d"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/textView25"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView24"
              android:layout_alignParentEnd="true"
              android:layout_marginStart="5dp"
              android:layout_toEndOf="@+id/textView24"
              android:paddingStart="10dp"
              android:text="@string/strength_Formula"
              android:textColor="#172b4d"
              tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/healthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

          <TextView
              android:id="@+id/textView28"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/health"
              android:textColor="#172b4d"
              android:textSize="16sp" />

          <TextView
              android:id="@+id/textView29"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView28"
              android:paddingLeft="10dp"
              android:text="@string/health_explanatory"
              android:textAlignment="viewStart"
              android:textColor="#172b4d" />

          <TextView
              android:id="@+id/textView32"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView29"
              android:text="@string/Formula"
              android:textColor="#172b4d"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/textView33"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView32"
              android:layout_marginStart="5dp"
              android:layout_toEndOf="@+id/textView32"
              android:text="@string/health_Formula"
              android:textColor="#172b4d" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/safetyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

          <TextView
              android:id="@+id/textView34"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/safety"
              android:textColor="#172b4d"
              android:textSize="16sp" />

          <TextView
              android:id="@+id/textView35"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView34"
              android:paddingStart="10dp"
              android:text="@string/safety_explanatory"
              android:textAlignment="viewStart"
              android:textColor="#172b4d"
              tools:ignore="RtlSymmetry" />

          <TextView
              android:id="@+id/textView38"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView35"
              android:text="@string/Formula"
              android:textColor="#172b4d"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/textView39"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView38"
              android:layout_marginStart="5dp"
              android:layout_toEndOf="@+id/textView38"
              android:text="@string/safety_Formula"
              android:textColor="#172b4d" />
        </RelativeLayout>
      </LinearLayout>
    </RelativeLayout>
  </ScrollView>


</RelativeLayout>
