<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".profile.UpdatePasswordActivity">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/forgotView_PassWrapper"
    android:layout_width="267dp"
    android:layout_height="50dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.504"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2">
    <EditText
      android:id="@+id/input_password"
      android:layout_width="262dp"
      android:layout_height="wrap_content"
      android:hint="@string/new_password"
      android:inputType="textPassword"
      android:textSize="14sp"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
    android:id="@+id/forgotView_ConfirmPassWrapper"
    android:layout_width="268dp"
    android:layout_height="48dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/forgotView_PassWrapper">
    <EditText
      android:id="@+id/confirm_password"
      android:layout_width="262dp"
      android:layout_height="wrap_content"
      android:hint="@string/confirm_pass"
      android:inputType="textPassword"
      android:textSize="14sp"/>
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/changePassButton"
    android:layout_width="187dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@color/grey_background"
    android:text="@string/update_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/forgotView_ConfirmPassWrapper"/>
  <ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="72dp"
    android:layout_marginTop="32dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_gravity="center_horizontal"
    android:contentDescription="@string/logo_description"
    android:src="@drawable/cube_logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>